# ferrinx

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  design.md  rustfmt.toml
.cargo/: config.toml
crates/ferrinx-api/: Cargo.toml
crates/ferrinx-api/src/: error.rs  lib.rs  main.rs
crates/ferrinx-api/src/dto/: mod.rs
crates/ferrinx-api/src/handlers/: admin.rs  api_key.rs  auth.rs  inference.rs  mod.rs  model.rs
crates/ferrinx-api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
crates/ferrinx-api/src/routes/: mod.rs
crates/ferrinx-api/tests/: api_tests.rs  cli_tests.rs  e2e_full_tests.rs  e2e_tests.rs  mod.rs  worker_tests.rs
crates/ferrinx-api/tests/common/: mock_engine.rs  mock_redis.rs  mod.rs  test_app.rs  test_context_full.rs  test_db.rs
crates/ferrinx-api/tests/common/models/: lenet.onnx
crates/ferrinx-cli/: Cargo.toml
crates/ferrinx-cli/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/ferrinx-cli/src/commands/: admin.rs  api_key.rs  auth.rs  config_cmd.rs  infer.rs  mod.rs  model.rs  task.rs
crates/ferrinx-cli/tests/: e2e_tests.rs
crates/ferrinx-cli/tests/common/: mod.rs  test_app.rs
crates/ferrinx-common/: Cargo.toml
crates/ferrinx-common/src/: config.rs  constants.rs  dto.rs  error.rs  lib.rs  redis.rs  types.rs  utils.rs
crates/ferrinx-core/: Cargo.toml  errors.xml
crates/ferrinx-core/src/: error.rs  lib.rs
crates/ferrinx-core/src/inference/: engine.rs  mod.rs
crates/ferrinx-core/src/model/: config.rs  loader.rs  mod.rs
crates/ferrinx-core/src/storage/: local.rs  mod.rs
crates/ferrinx-core/src/transform/: mod.rs  pipeline.rs
crates/ferrinx-db/: Cargo.toml
crates/ferrinx-db/src/: context.rs  error.rs  lib.rs  traits.rs
crates/ferrinx-db/src/repositories/: sqlite.rs
crates/ferrinx-worker/: Cargo.toml
crates/ferrinx-worker/src/: consumer.rs  error.rs  lib.rs  main.rs  maintenance.rs  model_reporter.rs  processor.rs  redis.rs
crates/ferrinx-worker/tests/: integration_tests.rs
crates/ferrinx-worker/tests/common/: mod.rs  test_context.rs
docs/: WORKER.md
docs/design/: 01-common-module.md  02-db-module.md  03-core-module.md  04-api-module.md  05-worker-module.md  06-cli-module.md  07-redis-design.md  08-auth-design.md  09-deployment-design.md  README.md
scripts/: setup_musl_cross.py
tests/fixtures/models/: hanzi-tiny-labels.json  hanzi-tiny-no-labels.toml  hanzi-tiny.toml  hanzi_tiny.onnx  lenet.toml  lenet_labels.json  lenet_with_labels.toml
tests/integration/: README.md  api_tests.rs  cli_tests.rs  e2e_tests.rs  mod.rs  worker_tests.rs
tests/integration/fixtures/: mock_engine.rs  mock_redis.rs  mod.rs  test_app.rs  test_db.rs
