[package]
name = "ferrinx-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["api-23"]

api-17 = ["ferrinx-core/api-17"]
api-18 = ["ferrinx-core/api-18"]
api-19 = ["ferrinx-core/api-19"]
api-20 = ["ferrinx-core/api-20"]
api-21 = ["ferrinx-core/api-21"]
api-22 = ["ferrinx-core/api-22"]
api-23 = ["ferrinx-core/api-23"]
api-24 = ["ferrinx-core/api-24"]

cuda = ["ferrinx-core/cuda"]
rocm = ["ferrinx-core/rocm"]
coreml = ["ferrinx-core/coreml"]
webgpu = ["ferrinx-core/webgpu"]
load-dynamic = ["ferrinx-core/load-dynamic"]

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }
ferrinx-db = { path = "../ferrinx-db" }
ferrinx-core = { path = "../ferrinx-core" }

axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = "0.4"
image = "0.25"
ndarray = "0.17"
dashmap = "6"

[dev-dependencies]
ferrinx-cli = { path = "../ferrinx-cli" }
tempfile = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
