[package]
name = "ferrinx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrinx"
path = "src/main.rs"

[lib]
name = "ferrinx_cli"
path = "src/lib.rs"

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }
ferrinx-api = { path = "../ferrinx-api" }

clap = { version = "4.6", features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "6.0"
rpassword = "7.4"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indicatif = "0.18"
comfy-table = "7.2"
atty = "0.2"

[dev-dependencies]
ferrinx-core = { path = "../ferrinx-core" }
ferrinx-api = { path = "../ferrinx-api" }
ferrinx-db = { path = "../ferrinx-db" }
tempfile = { workspace = true }
assert_cmd = "2.2"
predicates = "3.1"
axum = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }
