[package]
name = "ferrinx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
cuda = ["ort/cuda"]
rocm = ["ort/rocm"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
load-dynamic = ["ort/load-dynamic"]

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }
ferrinx-db = { path = "../ferrinx-db" }

ndarray = "0.17"
lru = "0.16"
image = "0.25"
base64 = "0.22"

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tempfile = "3"

[dependencies.ort]
version = "=2.0.0-rc.12"
features = [
    "std",
    "ndarray",
    "download-binaries",
    "webgpu"
]

[target.'cfg(target_os = "linux")'.dependencies.ort]
version = "=2.0.0-rc.12"
features = ["download-binaries", "webgpu"]

[target.'cfg(target_os = "windows")'.dependencies.ort]
version = "=2.0.0-rc.12"
features = ["download-binaries", "webgpu"]

[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "=2.0.0-rc.12"
features = ["download-binaries", "coreml"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
