[package]
name = "ferrinx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["api-23"]

api-17 = ["ort/api-17"]
api-18 = ["ort/api-18"]
api-19 = ["ort/api-19"]
api-20 = ["ort/api-20"]
api-21 = ["ort/api-21"]
api-22 = ["ort/api-22"]
api-23 = ["ort/api-23"]
api-24 = ["ort/api-24"]

cuda = ["ort/cuda"]
rocm = ["ort/rocm"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
load-dynamic = ["ort/load-dynamic"]

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }
ferrinx-db = { path = "../ferrinx-db" }

ndarray = "0.17"
lru = "0.16"
image = "0.25"
base64 = "0.22"

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tempfile = "3"

[dependencies.ort]
version = "=2.0.0-rc.12"
default-features = false
features = [
    "std",
    "ndarray",
    "download-binaries",
    "tls-native",
    "copy-dylibs",
    "tracing"
]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
