[package]
name = "ferrinx-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "chrono", "uuid", "json"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
