[package]
name = "ferrinx-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
cuda = ["ferrinx-core/cuda"]
rocm = ["ferrinx-core/rocm"]
coreml = ["ferrinx-core/coreml"]
webgpu = ["ferrinx-core/webgpu"]
load-dynamic = ["ferrinx-core/load-dynamic"]

[dependencies]
ferrinx-common = { path = "../ferrinx-common" }
ferrinx-db = { path = "../ferrinx-db" }
ferrinx-core = { path = "../ferrinx-core" }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { version = "1.0", features = ["aio", "connection-manager", "tokio-comp"] }

signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
futures = "0.3"
hostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
